# userpasswd

./: .buildspec  .gitignore  CMakeLists.txt  Makefile  README.md  userpasswd.c  userpasswd.spec
.gear/: rules  userpasswd-gnome.spec  userpasswd.spec
backend/: CMakeLists.txt
backend/include/: pam_helper.h  pam_helper_json.h  passwduser.h
backend/pam_helper/include/: pam_helper_json.h  translate.h
backend/pam_helper/source/: pam_helper.c  pam_helper_json.c  passwduser.c
backend/userpasswd/include/: manipulcation_pwd.h
backend/userpasswd/source/: manipulation_pwd.c
data/: userpasswd.desktop  userpasswd.gresource.xml  userpasswd.metainfo.xml
data/css/: style.css
data/ui/: userpasswd-gnome-log-window.ui  userpasswd-gnome-window.ui  userpasswd-gtk-window.ui
gui/: userpasswd-window.c  userpasswd.c
locales/: CMakeLists.txt  userpasswd-gnome.pot  userpasswd.pot
locales/ru/: userpasswd-gnome.po  userpasswd.po
menu/: Makefile  userpasswd
pixmaps/: Makefile
po/: Makefile  ru.po
src/: Makefile  child.c  conv.c  loop.sh  main.c  parent.c  ui.c  userpasswd-app.c  userpasswd-app.h  userpasswd-log-window.c  userpasswd-log-window.h  userpasswd-stream.c  userpasswd-stream.h  userpasswd-window.c  userpasswd-window.h  userpasswd.h
src/pam_helper/: CMakeLists.txt
src/pam_helper/include/: pam_helper.h  pam_helper_json.h  translate.h
src/pam_helper/source/: pam_helper.c  pam_helper_json.c  translate.c
userpasswd/: README  userpasswd.spec
userpasswd/menu/: Makefile  userpasswd  userpasswd.desktop
userpasswd/pixmaps/: Makefile
userpasswd/po/: ru.po
userpasswd/src/: .gitignore  Makefile  child.c  conv.c  loop.sh  main.c  parent.c  ui.c  userpasswd.h
